[REFACTOR] change method selection file manager